done.  need to proofread and annotate exploration

--- a/Scenario 1 - suggesting prices to new renters.ipynb
+++ b/Scenario 1 - suggesting prices to new renters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "15307e2b",
+   "id": "ebd4889e",
    "metadata": {},
    "source": [
     "# Intro\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8882ffe",
+   "id": "e43048cf",
    "metadata": {},
    "source": [
     "# Scenario\n",
@@ -50,26 +50,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "6cdf10f3",
+   "execution_count": 131,
+   "id": "964f157e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "from collections import defaultdict\n",
     "from pprint import pprint\n",
     "import re\n",
     "from functools import reduce\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import LinearSVR\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
     "plt.rcParams['figure.figsize'] = (10,10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "71922e01",
+   "id": "898a3a94",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a79873",
+   "id": "6243c883",
    "metadata": {},
    "source": [
     "## Amenities\n",
@@ -128,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "92c90070",
+   "id": "8d57127e",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbcceb96",
+   "id": "f6e8a2fb",
    "metadata": {},
    "source": [
     "So, it appears that the amenities are given as strings, which are in turn stringified python arrays.\n",
@@ -158,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "34384f21",
+   "id": "05ac90b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6578f6ed",
+   "id": "1bbf803e",
    "metadata": {},
    "source": [
     "Next, I'd like to take a look at all the unique amenities listed, and a count of how often the appear."
@@ -181,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ce94510f",
+   "id": "201e2f9e",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be05a8e4",
+   "id": "cba87fe2",
    "metadata": {},
    "source": [
     "It appears that most amenities only appear once, while there are some amenities that appear 100s of times, and some that appear 10000s of times.  A histogram of the counts may be nice to see this."
@@ -810,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "f6745ad0",
+   "id": "47de05e1",
    "metadata": {
     "scrolled": true
    },
@@ -851,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c27ed9f",
+   "id": "689566ee",
    "metadata": {},
    "source": [
     "The histogram supports my initial impression.  Upon looking at the actual amenities and their counts, it seems that much of the disparity occurs due to specificity.  For example:\n",
@@ -876,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a656ebe9",
+   "id": "e20612d3",
    "metadata": {
     "scrolled": true
    },
@@ -1423,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3e86b500",
+   "id": "a029a383",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4fea3db",
+   "id": "b950615c",
    "metadata": {},
    "source": [
     "Since there are only 556 words appearing in this list, I'll just go through it and come up with the keywords related to the categories, and I'll define the tests later.  Roughly speaking, words that hardly appear at all won't be good features for our simple model, but words that occur too often don't give enough information.  Here's my list:\n",
@@ -1466,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "61896bf9",
+   "id": "3c863249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c716ac",
+   "id": "f1e160b5",
    "metadata": {},
    "source": [
     "I'll make a utility function that takes a dataframe, a column name, and a list of keywords, and returns a series which represents the value of the feature`"
@@ -1494,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "07f7dcee",
+   "id": "fade9bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "44fb536f",
+   "id": "e9de9475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "134e316a",
+   "id": "d3ccd75d",
    "metadata": {},
    "source": [
     "A quick bar chart for a sanity check on the features."
@@ -1529,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "065501f7",
+   "id": "cb780e5f",
    "metadata": {
     "scrolled": true
    },
@@ -1559,7 +1568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f02fe6",
+   "id": "ab5d7cd9",
    "metadata": {},
    "source": [
     "## description\n",
@@ -1574,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "2dfd35cf",
+   "id": "f72f31dd",
    "metadata": {
     "scrolled": true
    },
@@ -1842,7 +1851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c02e7c30",
+   "id": "04a3fb79",
    "metadata": {},
    "source": [
     "After reading these reviews, I'll update my lists\n",
@@ -1857,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6c409e06",
+   "id": "b31a2dd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1883,7 +1892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38cfa200",
+   "id": "70082d13",
    "metadata": {},
    "source": [
     "To try to get some interesting data from these word counts, we'll only consider words that:\n",
@@ -1897,7 +1906,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ff334aae",
+   "id": "46d5f2d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "e433e193",
+   "id": "6556ae9a",
    "metadata": {
     "scrolled": true
    },
@@ -1933,7 +1942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7470bb5c",
+   "id": "3042f2c8",
    "metadata": {},
    "source": [
     "So at this point we can extract five more features from the listings.\n",
@@ -1944,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "87edbc0f",
+   "id": "e849f803",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1967,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "886c96d5",
+   "id": "2462e4ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "1a89da1d",
+   "id": "d2b09624",
    "metadata": {
     "scrolled": true
    },
@@ -2003,7 +2012,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "09d0c8ae",
+   "id": "dca53312",
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b25354",
+   "id": "e004872b",
    "metadata": {},
    "source": [
     "These results pass the sanity check (at least, according to me)."
@@ -2028,7 +2037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c88652",
+   "id": "ee420241",
    "metadata": {},
    "source": [
     "## host_about\n",
@@ -2041,7 +2050,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "92ba5131",
+   "id": "1bc60cc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2073,7 +2082,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "f38d0647",
+   "id": "537d03d9",
    "metadata": {
     "scrolled": true
    },
@@ -2097,12 +2106,218 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2257e57c",
+   "id": "3a2adedb",
    "metadata": {},
    "source": [
     "# Building a model\n",
     "\n",
-    "Now that we have our features, we can feed them to a model and see how it performs."
+    "Now that we have our features, we can feed them to a model and see how it performs.\n",
+    "\n",
+    "Since this is a preliminary investigation, I'll choose three simple regression models from sklearn, fit them with a grid search, and compare their mean squared errors.\n",
+    "\n",
+    "First, there are two issues to address from the features we aren't extracting.  The latitude/longitude should probably be normalized, and bathrooms_text needs to be mapped to a float."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "09d05315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(s):\n",
+    "    return (s - s.mean()) / s.std()\n",
+    "\n",
+    "latitude = normalize(listings.latitude)\n",
+    "longitude = normalize(listings.longitude)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0448c897",
+   "metadata": {},
+   "source": [
+    "To map the bathrooms_text feature, we first look at the values it may take:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "005569d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1 bath', '2 baths', '1.5 baths', '2.5 baths', nan, '3 baths',\n",
+       "       '3.5 baths', 'Half-bath', '0 baths', '4 baths', '4.5 baths',\n",
+       "       '5 baths', '6 baths', '5.5 baths', '10 baths', '17 baths',\n",
+       "       '11 baths', '7.5 baths', '7 baths', '10.5 baths', '6.5 baths',\n",
+       "       '12 baths', '8 baths', '35 baths', '11.5 baths'], dtype=object)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listings.bathrooms_text.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f0e0cd3",
+   "metadata": {},
+   "source": [
+    "Our approach will be as straightforward as possible.  If the value is 'nan', we'll just return 1 (we'll assume that they have a bathroom, but just forgot to mention it).  If the value is 'Half-bath', we'll return .5.  Otherwise, we'll parse the float from the beginning of the string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "61808844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_bathrooms_text(text):\n",
+    "    if text == 'Half-bath':\n",
+    "        return .5\n",
+    "    m = re.match(r'\\d*\\.\\d*', str(text))\n",
+    "    if not m:\n",
+    "        return 1\n",
+    "    return float(m[0])\n",
+    "\n",
+    "bathrooms_text = listings.bathrooms_text.apply(map_bathrooms_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be7bd1a3",
+   "metadata": {},
+   "source": [
+    "Now we will define our models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "3cd2d99b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_regression = LinearRegression()\n",
+    "decision_tree_regressor = GridSearchCV(DecisionTreeRegressor(), {'max_leaf_nodes': [32,64,128,256]})\n",
+    "linear_svr = GridSearchCV(LinearSVR(), {'C': [.5,1,2]})\n",
+    "mlp_regressor = MLPRegressor((50,100,))\n",
+    "models = [\n",
+    "    linear_regression,\n",
+    "    decision_tree_regressor,\n",
+    "    linear_svr,\n",
+    "    mlp_regressor,\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43547b44",
+   "metadata": {},
+   "source": [
+    "Now we split our data for training and validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "efbb0189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pd.concat([\n",
+    "    latitude,\n",
+    "    longitude,\n",
+    "    bathrooms_text,\n",
+    "    *amenity_features.values(),\n",
+    "    *description_features.values(), \n",
+    "    *host_about_features.values(),\n",
+    "], axis=1)\n",
+    "\n",
+    "y = listings.price_float\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "b52b5d19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nathan/programming/py/airbnb/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:614: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in models:\n",
+    "    model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "72406d1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(8993.728799176128, 0.15162099643983484),\n",
+      " (8636.356223548804, 0.18533197398656842),\n",
+      " (9606.251720990858, 0.09384167068180826),\n",
+      " (7933.315380253397, 0.25164986097374265)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "errors = []\n",
+    "scores = []\n",
+    "for model in models:\n",
+    "    scores.append(model.score(X_test,y_test))\n",
+    "    errors.append(mean_squared_error(y_test, model.predict(X_test)))\n",
+    "\n",
+    "pprint(list(zip(errors,scores)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76e74a4b",
+   "metadata": {},
+   "source": [
+    "So it appears the mlp_regressor has performed the best out of the four models.  However, the R2 score .251 is still quite low."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8f455a5",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Here I briefly consider what the next steps may be, although I do not pursue them now.\n",
+    "\n",
+    "## Feature Engineering\n",
+    "\n",
+    "It's quite possible that I've chosen bad features.  I could try adding or removing some from the model, and see if scores improve at all.  I could also try to apply more intensive NLP techniques to get better features from the amenities, description, and about_host features.\n",
+    "\n",
+    "## Model Consideration\n",
+    "\n",
+    "More complex or advanced models may be appropriate for this data.  Perhaps experimenting with some deeper or more complex neural networks would give better results.  Also, some more control could be taken over the optimization strategies to try and observe the loss functions and see if more rounds of optimization would be appropriate."
    ]
   }
  ],
